--- a/source/modules/modals/m_modals.jade
+++ b/source/modules/modals/m_modals.jade
@@ -37,10 +37,26 @@ div(id="modal-manager" class="modal zoom-anim-dialog mfp-hide")
       li: a(class="fb" href="#")
       li: a(class="vk" href="#")
       li: a(class="ok" href="#")
+
+a(class="btn-modal" id="modal-success-signup-call" href="#modal-success-signup")
+div(id="modal-success-signup" class="modal zoom-anim-dialog mfp-hide")
+  .modal-title
+    h1 Регистрация прошла успешно!
+    p На ваш email отправлено уведомление о регистрации в системе.
+    ul
+      li: a(href="#") Центр помощи
+      li: a(href="#") Форум
+  .modal-footer
+    p Чтобы следить за новосями подпишитесь на нас в соц сетях:
+    ul
+      li: a(class="fb" href="#")
+      li: a(class="vk" href="#")
+      li: a(class="ok" href="#")
+
 a(class="btn-modal" id="modal-ty-call" href="#modal-ty")
 div(id="modal-ty" class="modal zoom-anim-dialog mfp-hide")
   .modal-title
-    h1 Спасибо за обращение! <br>Наш менеджер свяжеться с Вами для заполения документов
+    h1 Спасибо за обращение! <br>Наш менеджер свяжеться с Вами в ближайшее время.
   .modal-footer
     p Чтобы следить за новосями подпишитесь на нас в соц сетях:
     ul
