--- a/source/static/styl/components/modal.styl
+++ b/source/static/styl/components/modal.styl
@@ -232,6 +232,7 @@
             text-decoration underline
         ul.hidden
           display none
+#modal-success-signup,
 #modal-ty,
 #modal-manager
   max-width 570px
