--- a/source/modules/header/m_header.styl
+++ b/source/modules/header/m_header.styl
@@ -292,6 +292,7 @@
       margin 0 1px
       background-image url("../images/sprite.png")
       background-repeat no-repeat
+      opacity .5
       @media XS
         margin 0 2px
       &.ok
@@ -301,7 +302,7 @@
       &.vk
         background-position -100px 0
       &:hover
-        opacity .8
+        opacity 1
   .contacts
     line-height 42px
     @media SM
