--- a/source/modules/sidebar-panel/m_sidebar-panel.styl
+++ b/source/modules/sidebar-panel/m_sidebar-panel.styl
@@ -14,13 +14,14 @@
   @media XS
     min-width 400px
   @media LG
-    margin-left -260px
+    margin-left -205px
     left 0
     width 50%
     .scroll
       .header,
       .body
-        width 330px
+        // width 330px
+        width 380px
         margin-left auto
       .header
         .bottom
@@ -56,6 +57,8 @@
         right 15px
         top 50%
         margin-top -16px
+        @media LG
+          right 60px
     .main-menu
       width 36px
       height 36px
@@ -71,6 +74,8 @@
         vertical-align middle
   .body
     padding 15px
+    @media LG
+      padding-right 60px
     .actions
       margin-bottom 10px
       .signin
