--- a/source/pages/advantages.jade
+++ b/source/pages/advantages.jade
@@ -76,15 +76,17 @@ block content
         h3 Доступные сервисы такси для подключения
         p Подключаясь через нас вы получаете самые выгодные условия работы
         .list
-          .item: a(href="#"): img(src="images/network/1.png" alt="")
-          .item: a(href="#"): img(src="images/network/2.png" alt="")
-          .item: a(href="#"): img(src="images/network/3.png" alt="")
-          .item: a(href="#"): img(src="images/network/4.png" alt="")
-          .item: a(href="#"): img(src="images/network/5.png" alt="")
-          .item: a(href="#"): img(src="images/network/6.png" alt="")
-          .item: a(href="#"): img(src="images/network/7.png" alt="")
-          .item: a(href="#"): img(src="images/network/8.png" alt="")
-          .item: a(href="#"): img(src="images/network/9.png" alt="")
+          .network-carousel
+            .slide: .item: a(href="#"): img(src="images/network/1.png" alt="")
+            .slide: .item: a(href="#"): img(src="images/network/2.png" alt="")
+            .slide: .item: a(href="#"): img(src="images/network/3.png" alt="")
+            .slide: .item: a(href="#"): img(src="images/network/4.png" alt="")
+            .slide: .item: a(href="#"): img(src="images/network/5.png" alt="")
+            .slide: .item: a(href="#"): img(src="images/network/6.png" alt="")
+            .slide: .item: a(href="#"): img(src="images/network/7.png" alt="")
+            .slide: .item: a(href="#"): img(src="images/network/8.png" alt="")
+            .slide: .item: a(href="#"): img(src="images/network/9.png" alt="")
+            .slide: .item: a(class="custom" href="#"): span Ваша биржа такси
     .m_start-steps
       .wrapper
         .section-title
