--- a/source/pages/signup-service-2.jade
+++ b/source/pages/signup-service-2.jade
@@ -138,3 +138,6 @@ block content
               .step-final
                 button(type="submit" class="btn btn-orange") Зарегистрироваться
         .backward: a(href="#") Вернуться на предудыщий шаг
+    .signup-progressbar
+      span(class="status" style="width: 0%")
+      i <span>0</span> из 7
