--- a/source/modules/advantages/m_advantages.styl
+++ b/source/modules/advantages/m_advantages.styl
@@ -61,32 +61,34 @@
       text-align center
       @media MD
         font-size 24px
+    .network-carousel
+      padding-left 30px
+      padding-right 30px
+    .slick-arrow
+      width 16px
+      height 16px
+      position absolute
+      top 50%
+      margin-top -8px
+      border none
+      text-indent -9999px
+      font-size 0
+      z-index 2
+      &.slick-prev
+        left 0
+        background url("../images/back.png") no-repeat 0 0
+      &.slick-next
+        right 0
+        background url("../images/next.png") no-repeat 0 0
+    .slick-slide
+      margin 0 10px
+    .slick-list
+      margin 0 -10px
     .list
       clearfix()
       .item
-        float left
         height 70px
         line-height 70px
-        width 31.3%
-        margin-left 3%
-        margin-bottom 3%
-        @media XS
-          width 22.66%
-        @media MD
-          width 10.2%
-          margin-left 1%
-          margin-bottom 0
-          &:first-child
-            margin-left 0
-        @media screen and (max-width: 479px)
-          &:nth-child(3n+1)
-            clear left
-            margin-left 0
-        @media screen and (max-width: 991px) and (min-width: 480px)
-          &:nth-child(4n+1)
-            clear left
-            margin-left 0
-
         a
           display block
           width 100%
