--- a/source/modules/signup/m_signup.styl
+++ b/source/modules/signup/m_signup.styl
@@ -351,3 +351,28 @@
               display block
             br
               display none
+
+.signup-progressbar
+  position relative
+  left 0
+  bottom 0
+  width 100%
+  height 20px
+  z-index 10
+  background $blue
+  .status
+    display block
+    height 100%
+    background $orange
+  i
+    display block
+    text-align center
+    line-height 20px
+    position absolute
+    left 0
+    top 0
+    width 100%
+    height 100%
+    font-style normal
+    color #fff
+    exo()
